finish workshop 4 docs

--- a/workshop4/workshop4A.html
+++ b/workshop4/workshop4A.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Morgan Feeney" />
 
+<meta name="date" content="2024-07-03" />
 
 <title>BM424 workshop: infectious disease outbreak control</title>
 
@@ -1467,7 +1468,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">BM424 workshop: infectious disease outbreak control</h1>
 <h4 class="author">Morgan Feeney</h4>
-<h4 class="date">17/03/2023</h4>
+<h4 class="date">07/03/2024</h4>
 
 </div>
 
@@ -1476,7 +1477,7 @@ border-radius: 0px;
 <h2>Scenario A: <i>Legionella</i> in Inverkeld</h2>
 <p>The Inverkeld Pandemic Response committee has gathered the following information for the second meeting of your group.</p>
 <p>You should evaluate the effect(s) of the actions that you took at your last meeting and evaluate the current state of affairs in Inverkeld.</p>
-<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 24th, via the submission link on MyPlace.</p>
+<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 15th, via the submission link on MyPlace.</p>
 </div>
 <div id="minutes-from-the-last-pandemic-response-committee-meeting" class="section level2">
 <h2>Minutes from the last Pandemic Response Committee Meeting</h2>
@@ -1567,17 +1568,17 @@ Number of <i>Legionella</i> related GP visits (total)
 <div id="letters-from-the-public" class="section level2">
 <h2>Letters from the Public</h2>
 <hr />
-<p><b>From:</b> <a href="mailto:end_1946@gmail.com" class="email">end_1946@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:pbr_1946@gmail.com" class="email">pbr_1946@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommittee@Inverkeld.co.uk" class="email">PandemicResponseCommittee@Inverkeld.co.uk</a> <br>
 <b>Cc:</b>
-<b>Subject:</b> This Sad Pandemic</p>
+<b>Subject:</b> This Terrible Pandemic</p>
 <p>Dear Pandemic Response Committee</p>
 <p>I am so worried about this pandemic, it seems like there is lots of PPE this time around (which is great, I am not so old that I don’t remember all the scandals surrounding PPE back when the COVID19 pandemic first was!) But it seems like there should be something more we can do, are we doomed to go through a cycle of pandemic after pandemic, always sitting at home and worrying about whether we will die?</p>
 <p>Some of the folks last time said that I was overcautious, and that it was just a made-up pandemic that we were all afraid of, but I’ve got an old mum who’s quite frail, I can’t go taking risks when it comes to her health.</p>
-<p>Kind regards,<br>
-Anika</p>
+<p>Best wishes,<br>
+Roman</p>
 <hr />
-<p><b>From:</b> <a href="mailto:lucy-88@gmail.com" class="email">lucy-88@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:gldk-88@gmail.com" class="email">gldk-88@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommitteet@Inverkeld.co.uk" class="email">PandemicResponseCommitteet@Inverkeld.co.uk</a> <br>
 <b>Cc:</b> <a href="mailto:city-council@Inverkeld.co.uk" class="email">city-council@Inverkeld.co.uk</a> <br>
 <b>Subject:</b> Save Our Hospitals</p>
@@ -1585,48 +1586,48 @@ Anika</p>
 <p>I am so frightened about new pandemic, the news you read about it is very scary. Thank you so much for all your hard work you are doing to protect us.</p>
 <p>I heard that you have made the hospital very safe, with all your PPE stocks and surveillance technology to make sure that the ICU is functioning the way that it should, and that you’ve increased capacity so that it can handle more patients than usual when we are all sick. It is really great that you are able to do this, I was so worried during the COVID19 pandemic when all the nightingale hospitals were built and the poor doctors and nurses and all were being so overworked. I hope that there will always be enough funds to increase the hospital staff the way that the government really ought to do.</p>
 <p>Thank you so much for all the hard work you do,<br>
-Eleanor</p>
+Madison</p>
 <hr />
 </div>
 <div id="news-coverage-of-the-inverkeld-legionella-outbreak" class="section level2">
 <h2>News Coverage of the Inverkeld Legionella outbreak</h2>
-<p><font size="+3"><b>Inverkeld Daily Press</b></font><br>
+<p><font size="+3"><b>Inverkeld Sentinel</b></font><br>
 <font size="+2"><b>Inverkeld says farewell to pandemic’s youngest victim</b></font><br>
-by Alice Daniels
-08/03/2023</p>
-<p>The Legionella pandemic ravaging Inverkeld has claimed yet another victim. There have been 58 deaths in the pandemic so far, but perhaps the most tragic loss is Noah Clark - at only 4, the youngest victim that the pandemic has claimed.</p>
-<p>Noah Clark liked teddy bears and cars. Friends and family say that he was always the most precious child.</p>
-<p>Noah is survived by his parents and grandparents, and by his siblings Caleb and Brody.</p>
-<p>The funeral service will be held Wednesday at Trinity Baptist Church.</p>
-<hr />
-<p><font size="+3"><b>Inverkeld Telegraph</b></font><br>
-<font size="+2"><b>Inverkeld says farewell to local legend</b></font><br>
-by Tony Cohen
-10/03/2023</p>
-<p>The Legionella pandemic ravaging Inverkeld has claimed yet another victim. Esme Davies, local author and star, sadly passed away on Saturday.</p>
-<p>Esme was perhaps best known for her 2015 work One True Love , but fans say that the rest of her work was equally as influential.</p>
-<p>Esme is survived by her partner, and by her siblings Charlotte and Harper.</p>
-<p>The funeral service will be held Friday at St. Andrew’s.</p>
-<hr />
-<p><font size="+3"><b>Inverkeld Evening News</b></font><br>
-<font size="+2"><b>Inverkeld pandemic council making great strides</b></font><br>
-by Tony Schiller
-17/03/2023</p>
-<p>Citizens of Inverkeld should be glad that the city’s Pandemic Response Council, hurriedly convened when a new pandemic began to hit Inverkeld, has been so effective. While the initial death toll from the pandemic appeared to be quite high, the actions taken by the PRC seem to have been most effective.</p>
-<p>Officials from Public Health Scotland have publicly praised the Inverkeld PRC, saying that their actions have been extremely effective</p>
-<p>There have been 6 deaths due to Legionella in Inverkeld this week. This is an enormous decrease, and hopefully Inverkeld will see the death toll continue to decrease in the coming weeks.</p>
+by Emily O’Brien
+09/03/2023</p>
+<p>The Legionella pandemic ravaging Inverkeld has claimed yet another victim. There have been 58 deaths in the pandemic so far, but perhaps the most tragic loss is Elijah Hughes - at only 2, the youngest victim that the pandemic has claimed.</p>
+<p>Elijah Hughes liked butterflies and dragons. Friends and family say that he was always a treasure.</p>
+<p>Elijah is survived by his parents and grandparents, and by his siblings Tammy and Beth.</p>
+<p>The funeral service will be held Friday at St. Ninian’s.</p>
 <hr />
 <p><font size="+3"><b>Inverkeld Times</b></font><br>
+<font size="+2"><b>Inverkeld says farewell to local legend</b></font><br>
+by Frances Patterson
+11/03/2023</p>
+<p>The Legionella pandemic ravaging Inverkeld has claimed yet another victim. Albert Walker, local artist and star, sadly passed away on Wednesday.</p>
+<p>Albert was perhaps best known for his 2009 work Harmful , but fans say that the rest of his work was equally as excellent.</p>
+<p>Albert is survived by his wife, and by his siblings Daisy and Phoebe.</p>
+<p>The funeral service will be held Monday at St. Mary’s.</p>
+<hr />
+<p><font size="+3"><b>Inverkeld Daily Press</b></font><br>
+<font size="+2"><b>Inverkeld pandemic council making great strides</b></font><br>
+by Lettitia Rogers
+17/03/2023</p>
+<p>Citizens of Inverkeld should be thankful that the city’s Pandemic Response Council, swiftly convened when a new pandemic began to hit Inverkeld, has been so effective. While the initial death toll from the pandemic appeared to be quite devastating, the actions taken by the PRC seem to have been most effective.</p>
+<p>Officials from the World Health Organisation have publicly praised the Inverkeld PRC, saying that their actions have been extremely effective</p>
+<p>There have been 6 deaths due to Legionella in Inverkeld this week. This is an enormous decrease, and hopefully Inverkeld will see the death toll continue to decrease in the coming weeks.</p>
+<hr />
+<p><font size="+3"><b>Inverkeld Sentinel</b></font><br>
 <font size="+2"><b>Yet more overreach in the name of “science”</b></font><br>
-by Lewis Davis
-08/03/2023</p>
+by Isaac Stone
+05/03/2023</p>
 <p>Governments across the globe have seen how successful power-grabs in the name of public health can be, following on the wave of restrictions imposed because of so-called viral diseases like COVID-19 and “mpox”. So-called scientists are fearmongering - aerosols, monkeys, “bird” flu - now they think that they can fool us into thinking that the air and water are unsafe. Citizens of Inverkeld should stand strong against this terrible tyranny! No more mask mandates, no more senseless restrictions!</p>
 <p>Our elders should not be left to die alone, left frightened and hopeless in a mandatory lockdown claimed to be “for their benefit.” Our children should not be left to struggle through “pandemic” after “pandemic” - their language and literacy skills have been left behind due to these lockdowns, and their mental health is suffering. It is time that we take back control of our lives and end this tyranny of fear-mongering and so-called science. Citizens of Inverkeld, stand with me and resist this most recent attack on your freedoms and your lives.</p>
 <hr />
 <p><font size="+3"><b>BBC Scotland </b></font><br>
 <font size="+2"><b>Legionella pandemic in Inverkeld</b></font><br>
-by Jane Mill
-12/03/2023</p>
+by Clive McGill
+14/03/2023</p>
 <p>Hard on the heels of the COVID-19 pandemic and a number of other health scares (monkeypox, or “mpox”, avian flu, and worries about other infectious disease outbreaks), another pandemic has hit the Scottish town of Inverkeld. This time, it’s Legionella, a bacterium that can very sadly be fatal.</p>
 <p>There have been 58 deaths in the pandemic so far, but perhaps the most frightening aspect to this new pandemic is rumours that these Legionella strains may have become resistant to even more antibiotics - a truly chilling possibility.</p>
 <p>Scientists have been warning about the antibiotic resistance crisis for years, saying that careless use of antibiotics could mean that these precious medicines will no longer be available to us in the future.</p>
@@ -1635,6 +1636,59 @@ by Jane Mill
 </div>
 <div id="data-gathered" class="section level2">
 <h2>Data gathered</h2>
+Table 1. Surveillance of hospital critical care capacity during the Inverkeld <i>Legionella</i> outbreak.
+<table>
+<table border="1">
+<tr>
+<th>
+Date
+</th>
+<th>
+ICU bed occupancy
+</th>
+</tr>
+<tr>
+<td>
+25/02/2024
+</td>
+<td>
+13
+</td>
+</tr>
+<tr>
+<td>
+27/02/2024
+</td>
+<td>
+11
+</td>
+</tr>
+<tr>
+<td>
+29/02/2024
+</td>
+<td>
+11
+</td>
+</tr>
+<tr>
+<td>
+02/03/2024
+</td>
+<td>
+7
+</td>
+</tr>
+<tr>
+<td>
+04/03/2024
+</td>
+<td>
+5
+</td>
+</tr>
+</table>
+<p><br><br></p>
 </div>
 </div>
 
