--- a/workshop4/workshop4B.html
+++ b/workshop4/workshop4B.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Morgan Feeney" />
 
+<meta name="date" content="2024-07-03" />
 
 <title>BM424 workshop: infectious disease outbreak control</title>
 
@@ -1467,7 +1468,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">BM424 workshop: infectious disease outbreak control</h1>
 <h4 class="author">Morgan Feeney</h4>
-<h4 class="date">17/03/2023</h4>
+<h4 class="date">07/03/2024</h4>
 
 </div>
 
@@ -1477,7 +1478,7 @@ border-radius: 0px;
 <p>Influenza A in Baltyre</p>
 <p>The Baltyre Pandemic Response committee has gathered the following information for the second meeting of your group.</p>
 <p>You should evaluate the effect(s) of the actions that you took at your last meeting and evaluate the current state of affairs in Baltyre.</p>
-<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 24th, via the submission link on MyPlace.</p>
+<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 15th, via the submission link on MyPlace.</p>
 </div>
 <div id="minutes-from-the-last-pandemic-response-committee-meeting" class="section level2">
 <h2>Minutes from the last Pandemic Response Committee Meeting</h2>
@@ -1564,65 +1565,65 @@ Number of Influenza A related GP visits (total)
 <div id="letters-from-the-public" class="section level2">
 <h2>Letters from the Public</h2>
 <hr />
-<p><b>From:</b> <a href="mailto:aptr_1955@gmail.com" class="email">aptr_1955@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:bhr_1955@gmail.com" class="email">bhr_1955@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommittee@Baltyre.co.uk" class="email">PandemicResponseCommittee@Baltyre.co.uk</a> <br>
 <b>Cc:</b>
-<b>Subject:</b> This Terrible Pandemic</p>
+<b>Subject:</b> This Bloody Pandemic</p>
 <p>Dear Pandemic Response Committee</p>
-<p>I am outraged to hear about your actions tackling the pandemic in Baltyre. If it isn’t enough that the NHS is eroded by decades of underfunding and mismanagement, now you are having pharmacies prescribe medicine. Dire times call for dire measures I know, but surely it is more important that you do something to fix our poor NHS instead of splashing out all this money on useless statues and silly things.</p>
-<p>I sincerely hope that your office is going to do something about this dreadful mess. Pharmacists don’t have the proper training to be prescribing drugs and it isn’t fair to make them do extra work, either. You’d never think that we live in the 21st century, the state our NHS is in - it’s a crying shame.</p>
+<p>I am extremely vexed to hear about your actions tackling the pandemic in Baltyre. If it isn’t enough that the NHS is eroded by decades of underfunding and mismanagement, now you are having pharmacies prescribe medicine. Dire times call for dire measures I know, but surely it is more important that you do something to fix our poor NHS instead of splashing out all this money on useless statues and silly things.</p>
+<p>I wish that your office is going to do something about this dreadful mess. Pharmacists don’t have the proper training to be prescribing drugs and it isn’t fair to make them do extra work, either. You’d never think that we live in the 21st century, the state our NHS is in - it’s a crying shame.</p>
 <p>Yours sincerely,<br>
-Wilson</p>
+Karen</p>
 <hr />
-<p><b>From:</b> <a href="mailto:bhr-88@gmail.com" class="email">bhr-88@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:lulu-88@gmail.com" class="email">lulu-88@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommitteet@Baltyre.co.uk" class="email">PandemicResponseCommitteet@Baltyre.co.uk</a> <br>
 <b>Cc:</b> <a href="mailto:city-council@Baltyre.co.uk" class="email">city-council@Baltyre.co.uk</a> <br>
 <b>Subject:</b> VACCINES ARE TOXIC</p>
 <p>Dear Pandemic Response Committee,</p>
 <p>I can already see that you and your office are going to use this new pandemic as yet another excuse for government overreach into citizens’ lives. Encouraging mask wearing and vaccination - your hands are already washed in blood. I hope you can sleep at night because I am sure I wouldn’t be able to if I were you. How many more innocents need to die before we just STOP it with these TOXIC vaccines?!?!</p>
-<p>Sincerely,<br>
-Ailidh</p>
+<p>Yours truly,<br>
+Karen</p>
 <hr />
 </div>
 <div id="newspaper-coverage" class="section level2">
 <h2>Newspaper coverage</h2>
-<p><font size="+3"><b>Baltyre Looking-Glass</b></font><br>
-<font size="+2"><b>Baltyre says farewell to pandemic’s youngest victim</b></font><br>
-by Emma Harris
-13/03/2023</p>
-<p>The influenza pandemic ravaging Baltyre has claimed yet another victim. There have been 35 deaths in the pandemic so far, but perhaps the most tragic loss is Leo Thompson - at only 2, the youngest victim that the pandemic has claimed.</p>
-<p>Leo Thompson liked zebras and trains. Friends and family say that he was always an absolute joy.</p>
-<p>Leo is survived by his parents and grandparents, and by his siblings Theodore and Mason.</p>
-<p>The funeral service will be held Thursday at St. Judes.</p>
-<hr />
 <p><font size="+3"><b>Baltyre Post</b></font><br>
-<font size="+2"><b>Baltyre says farewell to local legend</b></font><br>
-by Louisa Marin
-09/03/2023</p>
-<p>The influenza pandemic ravaging Baltyre has claimed yet another victim. Maisie Brown, local comedian and star, sadly passed away on Wednesday.</p>
-<p>Maisie was perhaps best known for her 2003 work A Fool’s Errand , but fans say that the rest of her work was equally as memorable.</p>
-<p>Maisie is survived by her partner, and by her siblings Hester and Winifred.</p>
-<p>The funeral service will be held Thursday at St. Elfrida’s Catholic Church.</p>
+<font size="+2"><b>Baltyre says farewell to pandemic’s youngest victim</b></font><br>
+by J.M. Lane
+08/03/2023</p>
+<p>The influenza pandemic ravaging Baltyre has claimed yet another victim. There have been 35 deaths in the pandemic so far, but perhaps the most tragic loss is Luca Evans - at only 2, the youngest victim that the pandemic has claimed.</p>
+<p>Luca Evans liked teddy bears and goldfish. Friends and family say that he was always a delight.</p>
+<p>Luca is survived by his parents and grandparents, and by his siblings Caleb and Brody.</p>
+<p>The funeral service will be held Saturday at St. Andrew’s.</p>
 <hr />
-<p><font size="+3"><b>Baltyre Telegraph</b></font><br>
+<p><font size="+3"><b>Baltyre Times</b></font><br>
+<font size="+2"><b>Baltyre says farewell to local legend</b></font><br>
+by Kate Evans
+10/03/2023</p>
+<p>The influenza pandemic ravaging Baltyre has claimed yet another victim. Cypress Wood, local comedian and star, sadly passed away on Saturday.</p>
+<p>Cypress was perhaps best known for their 2005 work Idle Thoughts , but fans say that the rest of their work was equally as genre-changing.</p>
+<p>Cypress is survived by their wife, and by their siblings Gloria and Stephen.</p>
+<p>The funeral service will be held Tuesday at St. Elfrida’s Catholic Church.</p>
+<hr />
+<p><font size="+3"><b>Baltyre Evening News</b></font><br>
 <font size="+2"><b>Baltyre pandemic council making great strides</b></font><br>
-by Bill Douglas
-07/03/2023</p>
-<p>Citizens of Baltyre should be grateful that the city’s Pandemic Response Council, swiftly convened when a new pandemic began to hit Baltyre, has been so effective. While the initial death toll from the pandemic appeared to be quite high, the actions taken by the PRC seem to have been most effective.</p>
-<p>Officials from the NHS have publicly praised the Baltyre PRC, saying that it is difficult to imagine a more effective public health response</p>
+by Harry Fox
+14/03/2023</p>
+<p>Citizens of Baltyre should be grateful that the city’s Pandemic Response Council, swiftly convened when a new pandemic began to hit Baltyre, has been so effective. While the initial death toll from the pandemic appeared to be quite alarming, the actions taken by the PRC seem to have been most effective.</p>
+<p>Officials from the NHS have publicly praised the Baltyre PRC, saying that their actions have been extremely effective</p>
 <p>There have been 5 deaths due to influenza in Baltyre this week. This is an enormous decrease, and hopefully Baltyre will see the death toll continue to decrease in the coming weeks.</p>
 <hr />
-<p><font size="+3"><b>Baltyre Telegraph</b></font><br>
+<p><font size="+3"><b>Baltyre Sentinel</b></font><br>
 <font size="+2"><b>Yet more overreach in the name of “science”</b></font><br>
-by Deborah Moore
-08/03/2023</p>
+by Byron Star
+07/03/2023</p>
 <p>Governments across the globe have seen how successful power-grabs in the name of public health can be, following on the wave of restrictions imposed because of so-called viral diseases like COVID-19 and “mpox”. So-called scientists are fearmongering - aerosols, monkeys, “bird” flu - now they think that they can fool us into thinking that the very air we breathe is unsafe. Citizens of Baltyre should stand strong against this terrible tyranny! No more mask mandates, no more senseless restrictions!</p>
 <p>Our elders should not be left to die alone, left frightened and hopeless in a mandatory lockdown claimed to be “for their benefit.” Our children should not be left to struggle through “pandemic” after “pandemic” - their language and literacy skills have been left behind due to these lockdowns, and their mental health is suffering. It is time that we take back control of our lives and end this tyranny of fear-mongering and so-called science. Citizens of Baltyre, stand with me and resist this most recent attack on your freedoms and your lives.</p>
 <hr />
-<p><font size="+3"><b>The Guardian </b></font><br>
+<p><font size="+3"><b>The Independent </b></font><br>
 <font size="+2"><b>influenza pandemic in Baltyre</b></font><br>
-by Fred Phillips
-13/03/2023</p>
+by Eric Shelley
+11/03/2023</p>
 <p>Hard on the heels of the COVID-19 pandemic and a number of other health scares (monkeypox, or “mpox”, Strep A, and worries about other infectious disease outbreaks), another pandemic has hit the Scottish town of Baltyre. This time, it’s influenza - the same virus that has caused global pandemics in the past.</p>
 <p>There have been 35 deaths in the pandemic so far, but perhaps the most frightening aspect to this new pandemic is rumours that this variant of avian influenza has crossed the species barrier and can be transmitted from human to human.</p>
 <p>Scientists have been talking about this possibility for years, warning of the potential for a massive pandemic similar to the 1918 “Spanish Flu”.</p>
@@ -1651,7 +1652,7 @@ Number of positive RT-PCR tests
 Sue’s Duck Farm
 </td>
 <td>
-47
+100
 </td>
 <td>
 4
@@ -1662,7 +1663,18 @@ Sue’s Duck Farm
 Craig’s Chickens
 </td>
 <td>
-97
+83
+</td>
+<td>
+4
+</td>
+</tr>
+<tr>
+<td>
+Ellenmere Farm
+</td>
+<td>
+47
 </td>
 <td>
 8
@@ -1670,7 +1682,117 @@ Craig’s Chickens
 </tr>
 <tr>
 <td>
-Ellenmere Farm
+Highgrove
+</td>
+<td>
+69
+</td>
+<td>
+7
+</td>
+</tr>
+<tr>
+<td>
+Clucks-alot Farms
+</td>
+<td>
+79
+</td>
+<td>
+5
+</td>
+</tr>
+<tr>
+<td>
+Lucky Clucky Farms
+</td>
+<td>
+75
+</td>
+<td>
+3
+</td>
+</tr>
+<tr>
+<td>
+The Golden Goose
+</td>
+<td>
+69
+</td>
+<td>
+6
+</td>
+</tr>
+<tr>
+<td>
+Hightree Nature Reserve
+</td>
+<td>
+66
+</td>
+<td>
+1
+</td>
+</tr>
+<tr>
+<td>
+Lakesmere
+</td>
+<td>
+95
+</td>
+<td>
+5
+</td>
+</tr>
+<tr>
+<td>
+Heather and Gorse Farms
+</td>
+<td>
+47
+</td>
+<td>
+10
+</td>
+</tr>
+<tr>
+<td>
+Grace’s Ganders
+</td>
+<td>
+86
+</td>
+<td>
+0
+</td>
+</tr>
+<tr>
+<td>
+Loosey Goosey Farms
+</td>
+<td>
+77
+</td>
+<td>
+10
+</td>
+</tr>
+<tr>
+<td>
+The Chicken Run
+</td>
+<td>
+68
+</td>
+<td>
+7
+</td>
+</tr>
+<tr>
+<td>
+Greenacres
 </td>
 <td>
 76
@@ -1681,134 +1803,13 @@ Ellenmere Farm
 </tr>
 <tr>
 <td>
-Highgrove
-</td>
-<td>
-55
-</td>
-<td>
-10
-</td>
-</tr>
-<tr>
-<td>
-Clucks-alot Farms
-</td>
-<td>
-35
-</td>
-<td>
-8
-</td>
-</tr>
-<tr>
-<td>
-Lucky Clucky Farms
-</td>
-<td>
-35
-</td>
-<td>
-9
-</td>
-</tr>
-<tr>
-<td>
-The Golden Goose
-</td>
-<td>
-75
-</td>
-<td>
-8
-</td>
-</tr>
-<tr>
-<td>
-Hightree Nature Reserve
-</td>
-<td>
-71
-</td>
-<td>
-3
-</td>
-</tr>
-<tr>
-<td>
-Lakesmere
-</td>
-<td>
-51
-</td>
-<td>
-10
-</td>
-</tr>
-<tr>
-<td>
-Heather and Gorse Farms
-</td>
-<td>
-30
-</td>
-<td>
-7
-</td>
-</tr>
-<tr>
-<td>
-Grace’s Ganders
-</td>
-<td>
-87
-</td>
-<td>
-9
-</td>
-</tr>
-<tr>
-<td>
-Loosey Goosey Farms
-</td>
-<td>
-87
-</td>
-<td>
-8
-</td>
-</tr>
-<tr>
-<td>
-The Chicken Run
-</td>
-<td>
-73
-</td>
-<td>
-3
-</td>
-</tr>
-<tr>
-<td>
-Greenacres
-</td>
-<td>
-89
-</td>
-<td>
-2
-</td>
-</tr>
-<tr>
-<td>
 Hill Farm
 </td>
 <td>
-95
+33
 </td>
 <td>
-10
+6
 </td>
 </tr>
 <tr>
@@ -1816,10 +1817,10 @@ Hill Farm
 Loyola’s Turkey Farm
 </td>
 <td>
-54
+73
 </td>
 <td>
-2
+5
 </td>
 </tr>
 <tr>
@@ -1827,10 +1828,10 @@ Loyola’s Turkey Farm
 The Balltyre Quail Farm
 </td>
 <td>
-87
+35
 </td>
 <td>
-0
+5
 </td>
 </tr>
 <tr>
@@ -1838,7 +1839,7 @@ The Balltyre Quail Farm
 Goosopolis Farms
 </td>
 <td>
-44
+41
 </td>
 <td>
 9
@@ -1849,10 +1850,10 @@ Goosopolis Farms
 Cordelia and Ken’s Chickens
 </td>
 <td>
-84
+79
 </td>
 <td>
-6
+0
 </td>
 </tr>
 <tr>
@@ -1860,10 +1861,10 @@ Cordelia and Ken’s Chickens
 Fair Hope Farm
 </td>
 <td>
-88
+36
 </td>
 <td>
-0
+7
 </td>
 </tr>
 </table>
