--- a/workshop4/workshop4C.html
+++ b/workshop4/workshop4C.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Morgan Feeney" />
 
+<meta name="date" content="2024-07-03" />
 
 <title>BM424 workshop: infectious disease outbreak control</title>
 
@@ -1467,7 +1468,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">BM424 workshop: infectious disease outbreak control</h1>
 <h4 class="author">Morgan Feeney</h4>
-<h4 class="date">17/03/2023</h4>
+<h4 class="date">07/03/2024</h4>
 
 </div>
 
@@ -1476,7 +1477,7 @@ border-radius: 0px;
 <h2>Scenario C: MRSA in Malleith</h2>
 <p>The Malleith Pandemic Response committee has gathered the following information for the second meeting of your group.</p>
 <p>You should evaluate the effect(s) of the actions that you took at your last meeting and evaluate the current state of affairs in Malleith.</p>
-<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 24th, via the submission link on MyPlace.</p>
+<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 15th, via the submission link on MyPlace.</p>
 </div>
 <div id="minutes-from-the-last-pandemic-response-committee-meeting" class="section level2">
 <h2>Minutes from the last Pandemic Response Committee Meeting</h2>
@@ -1570,17 +1571,17 @@ Number of MRSA related GP visits (total)
 <div id="letters-from-the-public" class="section level2">
 <h2>Letters from the Public</h2>
 <hr />
-<p><b>From:</b> <a href="mailto:jim_1955@gmail.com" class="email">jim_1955@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:att_1955@gmail.com" class="email">att_1955@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommittee@Malleith.co.uk" class="email">PandemicResponseCommittee@Malleith.co.uk</a> <br>
 <b>Cc:</b>
-<b>Subject:</b> This Bloody Pandemic</p>
+<b>Subject:</b> This Terrible Pandemic</p>
 <p>Dear Pandemic Response Committee</p>
 <p>I am so frightened by the current pandemic that is rampaging through my beloved city. I have never heard of this MRSA before but it is dreadfully scary. The radio advert I heard yesterday made it sound like a huge problem. What is the world coming to, I ask you, with the MRSA plague on top of the COVID19 one already and the monkeypox as well. It feels like a judgement on our times.</p>
-<p>Thank you so much for your hard work keeping us safe, I heard that you were buying in some vancomycin to kill these evil superbugs. I think you should distribute this to everyone in Malleith so that we can be safe from thi sterror.</p>
-<p>All the best,<br>
-Luke</p>
+<p>Thank you so much for your hard work keeping us safe, I heard that you were buying in some vancomycin to kill these evil superbugs. I think you should distribute this to everyone in Malleith so that we can be safe from this terror.</p>
+<p>Kind regards,<br>
+Kieran</p>
 <hr />
-<p><b>From:</b> <a href="mailto:js-88@gmail.com" class="email">js-88@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:oli-88@gmail.com" class="email">oli-88@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommitteet@Malleith.co.uk" class="email">PandemicResponseCommitteet@Malleith.co.uk</a> <br>
 <b>Cc:</b> <a href="mailto:city-council@Malleith.co.uk" class="email">city-council@Malleith.co.uk</a> <br>
 <b>Subject:</b> The state of our hospitals</p>
@@ -1589,48 +1590,48 @@ Luke</p>
 <p>I am really worried that she will have caught the MRSA from the hospital and will die. I heard from Nell who is a nurse there that they have new training measures in place to try to prevent the spread of the superbug, but I am just so worried that it will not be enough. Are there any further measures that you can take to help to keep us all safe?</p>
 <p>I know the NHS is struggling because it has been underfunded for so many years, but if you can find a little bit of extra money somewhere, I am sure it would make a real difference to my nan.</p>
 <p>Thank you so much for all the hard work you do,<br>
-Alise</p>
+Rosemary</p>
 <hr />
 </div>
 <div id="news-coverage-of-the-malleith-mrsa-outbreak" class="section level2">
 <h2>News Coverage of the Malleith MRSA outbreak</h2>
-<p><font size="+3"><b>Malleith Sentinel</b></font><br>
+<p><font size="+3"><b>Malleith Star</b></font><br>
 <font size="+2"><b>Malleith says farewell to pandemic’s youngest victim</b></font><br>
-by Abigail Ray
-13/03/2023</p>
-<p>The MRSA pandemic ravaging Malleith has claimed yet another victim. There have been 24 deaths in the pandemic so far, but perhaps the most tragic loss is Ray Brown - at only 5, the youngest victim that the pandemic has claimed.</p>
-<p>Ray Brown liked elephants and giraffes. Friends and family say that he was always a treasure.</p>
-<p>Ray is survived by his parents and grandparents, and by his siblings Rory and Susan.</p>
-<p>The funeral service will be held Wednesday at St. Andrew’s.</p>
+by Frank Nicoll
+12/03/2023</p>
+<p>The MRSA pandemic ravaging Malleith has claimed yet another victim. There have been 24 deaths in the pandemic so far, but perhaps the most tragic loss is Olivia Wright - at only 4, the youngest victim that the pandemic has claimed.</p>
+<p>Olivia Wright liked butterflies and goldfish. Friends and family say that she was always a treasure.</p>
+<p>Olivia is survived by her parents and grandparents, and by her siblings Livvy and Jane.</p>
+<p>The funeral service will be held Thursday at St. Ninian’s.</p>
+<hr />
+<p><font size="+3"><b>Malleith Star</b></font><br>
+<font size="+2"><b>Malleith says farewell to local legend</b></font><br>
+by Roselyne McClary
+09/03/2023</p>
+<p>The MRSA pandemic ravaging Malleith has claimed yet another victim. Edward Wilson, local musician and star, sadly passed away on Tuesday.</p>
+<p>Edward was perhaps best known for his 2011 work A Fool’s Errand , but fans say that the rest of his work was equally as memorable.</p>
+<p>Edward is survived by his partner, and by his siblings Gloria and Stephen.</p>
+<p>The funeral service will be held Tuesday at St. Ninian’s.</p>
 <hr />
 <p><font size="+3"><b>Malleith Times</b></font><br>
-<font size="+2"><b>Malleith says farewell to local legend</b></font><br>
-by Isaac Davis
-06/03/2023</p>
-<p>The MRSA pandemic ravaging Malleith has claimed yet another victim. Maya Evans, local artist and star, sadly passed away on Thursday.</p>
-<p>Maya was perhaps best known for her 2003 work Enemy of Fire , but fans say that the rest of her work was equally as genre-changing.</p>
-<p>Maya is survived by her wife, and by her siblings Charlotte and Harper.</p>
-<p>The funeral service will be held Thursday at Trinity Baptist Church.</p>
-<hr />
-<p><font size="+3"><b>Malleith News</b></font><br>
 <font size="+2"><b>Malleith pandemic council making great strides</b></font><br>
-by Frank Ochs
-04/03/2023</p>
-<p>Citizens of Malleith should be grateful that the city’s Pandemic Response Council, swiftly convened when a new pandemic began to hit Malleith, has been so effective. While the initial death toll from the pandemic appeared to be quite alarming, the actions taken by the PRC seem to have been most effective.</p>
-<p>Officials from the NHS have publicly praised the Malleith PRC, saying that it is difficult to imagine a more effective public health response</p>
+by Miguel Holmes
+13/03/2023</p>
+<p>Citizens of Malleith should be glad that the city’s Pandemic Response Council, hurriedly convened when a new pandemic began to hit Malleith, has been so effective. While the initial death toll from the pandemic appeared to be quite devastating, the actions taken by the PRC seem to have been most effective.</p>
+<p>Officials from the World Health Organisation have publicly praised the Malleith PRC, saying that the PRC has done all of the right things</p>
 <p>There have been 6 deaths due to MRSA in Malleith this week. This is an enormous decrease, and hopefully Malleith will see the death toll continue to decrease in the coming weeks.</p>
 <hr />
 <p><font size="+3"><b>Malleith News</b></font><br>
 <font size="+2"><b>Yet more overreach in the name of “science”</b></font><br>
-by Edwin Jensen
-03/03/2023</p>
+by Abigail Schultz
+17/03/2023</p>
 <p>Governments across the globe have seen how successful power-grabs in the name of public health can be, following on the wave of restrictions imposed because of so-called viral diseases like COVID-19 and “mpox”. So-called scientists are fearmongering - aerosols, monkeys, “bird” flu - now they think that they can fool us into thinking that the air and water are unsafe. Citizens of Malleith should stand strong against this terrible tyranny! No more mask mandates, no more senseless restrictions!</p>
 <p>Our elders should not be left to die alone, left frightened and hopeless in a mandatory lockdown claimed to be “for their benefit.” Our children should not be left to struggle through “pandemic” after “pandemic” - their language and literacy skills have been left behind due to these lockdowns, and their mental health is suffering. It is time that we take back control of our lives and end this tyranny of fear-mongering and so-called science. Citizens of Malleith, stand with me and resist this most recent attack on your freedoms and your lives.</p>
 <hr />
 <p><font size="+3"><b>BBC Scotland </b></font><br>
 <font size="+2"><b>MRSA pandemic in Malleith</b></font><br>
-by Elliot McGill
-03/03/2023</p>
+by Chester Grant
+15/03/2023</p>
 <p>Hard on the heels of the COVID-19 pandemic and a number of other health scares (monkeypox, or “mpox”, avian flu, and worries about other infectious disease outbreaks), another pandemic has hit the Scottish town of Malleith. This time, it’s MRSA, a bacterium that is resistant to the antibiotic methicillin</p>
 <p>There have been 24 deaths in the pandemic so far, but perhaps the most frightening aspect to this new pandemic is rumours that these MRSA strains may have become resistant to even more antibiotics - a truly chilling possibility.</p>
 <p>Scientists have been warning about the antibiotic resistance crisis for years, saying that careless use of antibiotics could mean that these precious medicines will no longer be available to us in the future.</p>
@@ -1660,7 +1661,7 @@ Number of colonies on Denim Blue Agar
 # 1
 </td>
 <td>
-53, white
+81, white
 </td>
 </tr>
 <tr>
@@ -1668,7 +1669,7 @@ Number of colonies on Denim Blue Agar
 # 2
 </td>
 <td>
-72, white
+93, white
 </td>
 </tr>
 <tr>
@@ -1708,7 +1709,7 @@ Number of colonies on Denim Blue Agar
 # 7
 </td>
 <td>
-61, white
+39, white
 </td>
 </tr>
 <tr>
@@ -1740,7 +1741,7 @@ Number of colonies on Denim Blue Agar
 # 11
 </td>
 <td>
-44, white
+75, white
 </td>
 </tr>
 <tr>
@@ -1764,7 +1765,7 @@ Number of colonies on Denim Blue Agar
 # 14
 </td>
 <td>
-74, white
+79, blue
 </td>
 </tr>
 <tr>
@@ -1860,7 +1861,7 @@ Number of colonies on Denim Blue Agar
 # 26
 </td>
 <td>
-98, white
+67, white
 </td>
 </tr>
 <tr>
