--- a/workshop4/workshop4E.html
+++ b/workshop4/workshop4E.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Morgan Feeney" />
 
+<meta name="date" content="2024-07-03" />
 
 <title>BM424 workshop: infectious disease outbreak control</title>
 
@@ -1467,7 +1468,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">BM424 workshop: infectious disease outbreak control</h1>
 <h4 class="author">Morgan Feeney</h4>
-<h4 class="date">17/03/2023</h4>
+<h4 class="date">07/03/2024</h4>
 
 </div>
 
@@ -1476,7 +1477,7 @@ border-radius: 0px;
 <h2>Scenario E: Listeria in Rosmakirk</h2>
 <p>The Rosmakirk Pandemic Response committee has gathered the following information for the second meeting of your group.</p>
 <p>You should evaluate the effect(s) of the actions that you took at your last meeting and evaluate the current state of affairs in Rosmakirk.</p>
-<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 24th, via the submission link on MyPlace.</p>
+<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 15th, via the submission link on MyPlace.</p>
 </div>
 <div id="minutes-from-the-last-pandemic-response-committee-meeting" class="section level2">
 <h2>Minutes from the last Pandemic Response Committee Meeting</h2>
@@ -1579,64 +1580,64 @@ Number of Listeria related GP visits (total)
 <div id="letters-from-the-public" class="section level2">
 <h2>Letters from the Public</h2>
 <hr />
-<p><b>From:</b> <a href="mailto:amd_1955@gmail.com" class="email">amd_1955@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:tgh_1955@gmail.com" class="email">tgh_1955@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommittee@Rosmakirk.co.uk" class="email">PandemicResponseCommittee@Rosmakirk.co.uk</a> <br>
 <b>Cc:</b>
-<b>Subject:</b> This Terrible Pandemic</p>
+<b>Subject:</b> This Devastating Pandemic</p>
 <p>Dear Pandemic Response Committee</p>
 <p>I am so outraged by the food inspections you have mandated in all of the lovely restaurants in Rosmakirk, it is like living in some nightmare of a country where you think that you can’t trust anyone to be safe. What right do you have to impose these fascist measures on our fair city? The restaurants here have always had a very high safety record and are very good, I very much resent your implication that they are the source of this dreadful pandemic.</p>
-<p>Sincerely,<br>
-Ailidh</p>
+<p>Kind regards,<br>
+Rodrigo</p>
 <hr />
-<p><b>From:</b> <a href="mailto:lucy-88@gmail.com" class="email">lucy-88@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:bhr-88@gmail.com" class="email">bhr-88@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommitteet@Rosmakirk.co.uk" class="email">PandemicResponseCommitteet@Rosmakirk.co.uk</a> <br>
 <b>Cc:</b> <a href="mailto:city-council@Rosmakirk.co.uk" class="email">city-council@Rosmakirk.co.uk</a> <br>
 <b>Subject:</b> The state of the world</p>
 <p>Dear Pandemic Response Committee,</p>
 <p>I am so frightened about the foods that are available for sale in the hospital, I was in for an appointment and I seen also all the reports about how we should not eat anything that might be contaminated with Listeria. It feels like everything is so unsafe in the world now, for a while it was all the air we breathe was making us unsafe with the COVID virus and now it is the food that we are eating making us ill. Can you please just make sure people are safe again?</p>
 <p>Thank you so much for all the hard work you do,<br>
-Kieran</p>
+Wilson</p>
 <hr />
 </div>
 <div id="news-coverage-of-the-rosmakirk-listeria-outbreak" class="section level2">
 <h2>News Coverage of the Rosmakirk Listeria outbreak</h2>
-<p><font size="+3"><b>Rosmakirk Daily Press</b></font><br>
+<p><font size="+3"><b>Rosmakirk Telegraph</b></font><br>
 <font size="+2"><b>Rosmakirk says farewell to pandemic’s youngest victim</b></font><br>
-by Miguel Matthews
-15/03/2023</p>
-<p>The <i>Listeria monocytogenes</i> pandemic ravaging Rosmakirk has claimed yet another victim. There have been 58 deaths in the pandemic so far, but perhaps the most tragic loss is Noah Williams - at only 3, the youngest victim that the pandemic has claimed.</p>
-<p>Noah Williams liked butterflies and unicorns. Friends and family say that he was always an absolute joy.</p>
-<p>Noah is survived by his parents and grandparents, and by his siblings Carter, David, and Milo.</p>
-<p>The funeral service will be held Wednesday at St. Ninian’s.</p>
+by Lester Lane
+07/03/2023</p>
+<p>The <i>Listeria monocytogenes</i> pandemic ravaging Rosmakirk has claimed yet another victim. There have been 58 deaths in the pandemic so far, but perhaps the most tragic loss is Elijah Roberts - at only 4, the youngest victim that the pandemic has claimed.</p>
+<p>Elijah Roberts liked airplanes and koala bears. Friends and family say that he was always an absolute joy.</p>
+<p>Elijah is survived by his parents and grandparents, and by his siblings Charlie, Alfie, and Jacob.</p>
+<p>The funeral service will be held Monday at Trinity Church.</p>
 <hr />
-<p><font size="+3"><b>Rosmakirk Daily Press</b></font><br>
+<p><font size="+3"><b>Rosmakirk Times</b></font><br>
 <font size="+2"><b>Rosmakirk says farewell to local legend</b></font><br>
-by Willa Grant
-13/03/2023</p>
-<p>The <i>Listeria monocytogenes</i> pandemic ravaging Rosmakirk has claimed yet another victim. Sol Gibson, local artist and star, sadly passed away on Saturday.</p>
-<p>Sol was perhaps best known for their 2001 work Harmful , but fans say that the rest of their work was equally as influential.</p>
-<p>Sol is survived by their wife, and by their siblings Jim, Ella, and Evie.</p>
-<p>The funeral service will be held Tuesday at St. Ninian’s.</p>
+by George Ray
+15/03/2023</p>
+<p>The <i>Listeria monocytogenes</i> pandemic ravaging Rosmakirk has claimed yet another victim. Landry Jones, local artist and star, sadly passed away on Wednesday.</p>
+<p>Landry was perhaps best known for their 2004 work A Whole Latte , but fans say that the rest of their work was equally as genre-changing.</p>
+<p>Landry is survived by their wife, and by their siblings Daisy and Phoebe.</p>
+<p>The funeral service will be held Thursday at St. Mary’s.</p>
 <hr />
-<p><font size="+3"><b>Rosmakirk Evening News</b></font><br>
+<p><font size="+3"><b>Rosmakirk Post</b></font><br>
 <font size="+2"><b>Rosmakirk pandemic council making great strides</b></font><br>
-by Francis Harris
-10/03/2023</p>
-<p>Citizens of Rosmakirk should be grateful that the city’s Pandemic Response Council, hurriedly convened when a new pandemic began to hit Rosmakirk, has been so effective. While the initial death toll from the pandemic appeared to be quite high, the actions taken by the PRC seem to have been most effective.</p>
-<p>Officials from the Center for Disease Control have publicly praised the Rosmakirk PRC, saying that the PRC has done all of the right things</p>
+by Ben Schultz
+03/03/2023</p>
+<p>Citizens of Rosmakirk should be grateful that the city’s Pandemic Response Council, hurriedly convened when a new pandemic began to hit Rosmakirk, has been so effective. While the initial death toll from the pandemic appeared to be quite alarming, the actions taken by the PRC seem to have been most effective.</p>
+<p>Officials from the NHS have publicly praised the Rosmakirk PRC, saying that it is difficult to imagine a more effective public health response</p>
 <p>There have been 6 deaths due to <i>Listeria monocytogenes</i> in Rosmakirk this week. This is an enormous decrease, and hopefully Rosmakirk will see the death toll continue to decrease in the coming weeks.</p>
 <hr />
-<p><font size="+3"><b>Rosmakirk Sentinel</b></font><br>
+<p><font size="+3"><b>Rosmakirk Daily Press</b></font><br>
 <font size="+2"><b>Yet more overreach in the name of “science”</b></font><br>
-by Norman O’Brien
-08/03/2023</p>
+by Norman Gallagher
+11/03/2023</p>
 <p>Governments across the globe have seen how successful power-grabs in the name of public health can be, following on the wave of restrictions imposed because of so-called viral diseases like COVID-19 and “mpox”. So-called scientists are fearmongering - aerosols, monkeys, “bird” flu - now they think that they can fool us into thinking that the air and water are unsafe. Citizens of Rosmakirk should stand strong against this terrible tyranny! No more mask mandates, no more senseless restrictions!</p>
 <p>Our elders should not be left to die alone, left frightened and hopeless in a mandatory lockdown claimed to be “for their benefit.” Our children should not be left to struggle through “pandemic” after “pandemic” - their language and literacy skills have been left behind due to these lockdowns, and their mental health is suffering. It is time that we take back control of our lives and end this tyranny of fear-mongering and so-called science. Citizens of Rosmakirk, stand with me and resist this most recent attack on your freedoms and your lives.</p>
 <hr />
-<p><font size="+3"><b>BBC Scotland </b></font><br>
+<p><font size="+3"><b>The Guardian </b></font><br>
 <font size="+2"><b><i>Listeria monocytogenes</i> pandemic in Rosmakirk</b></font><br>
-by Mick Schiller
-10/03/2023</p>
+by Chester Evans
+08/03/2023</p>
 <p>Hard on the heels of the COVID-19 pandemic and a number of other health scares (monkeypox, or “mpox”, avian flu, and worries about other infectious disease outbreaks), another pandemic has hit the Scottish town of Rosmakirk. This time, it’s Listeria, a bacterium that is particularly fatal to the elderly and to pregnant women.</p>
 <p>There have been 58 deaths in the pandemic so far, but perhaps the most frightening aspect to this new pandemic is rumours that these Listeria strains may have become resistant to even more antibiotics - a truly chilling possibility.</p>
 <p>Scientists have been warning about the antibiotic resistance crisis for years, saying that careless use of antibiotics could mean that these precious medicines will no longer be available to us in the future.</p>
@@ -1653,7 +1654,7 @@ Table 1. Whole genome sequences were compared to NCBI accession numbers given.
 <table border="1">
 <tr>
 <th>
-Patient (names redacted due to GDPR)
+Patient contacts (names redacted due to GDPR)
 </th>
 <th>
 Close match to NCBI <i>Listeria</i> sequence?
