--- a/workshop4/workshop4G.html
+++ b/workshop4/workshop4G.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Morgan Feeney" />
 
+<meta name="date" content="2024-07-03" />
 
 <title>BM424 workshop: infectious disease outbreak control</title>
 
@@ -1467,7 +1468,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">BM424 workshop: infectious disease outbreak control</h1>
 <h4 class="author">Morgan Feeney</h4>
-<h4 class="date">17/03/2023</h4>
+<h4 class="date">07/03/2024</h4>
 
 </div>
 
@@ -1476,7 +1477,7 @@ border-radius: 0px;
 <h2>Scenario G: Tuberculosis in Glenleith</h2>
 <p>The Glenleith Pandemic Response committee has gathered the following information for the second meeting of your group.</p>
 <p>You should evaluate the effect(s) of the actions that you took at your last meeting and evaluate the current state of affairs in Glenleith.</p>
-<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 24th, via the submission link on MyPlace.</p>
+<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 15th, via the submission link on MyPlace.</p>
 </div>
 <div id="minutes-from-the-last-pandemic-response-committee-meeting" class="section level2">
 <h2>Minutes from the last Pandemic Response Committee Meeting</h2>
@@ -1564,16 +1565,16 @@ Number of Tuberculosis related GP visits (total)
 <div id="letters-from-the-public" class="section level2">
 <h2>Letters from the Public</h2>
 <hr />
-<p><b>From:</b> <a href="mailto:amd_1946@gmail.com" class="email">amd_1946@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:bhr_1946@gmail.com" class="email">bhr_1946@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommittee@Glenleith.co.uk" class="email">PandemicResponseCommittee@Glenleith.co.uk</a> <br>
 <b>Cc:</b>
 <b>Subject:</b> This Bloody Pandemic</p>
 <p>Dear Pandemic Response Committee</p>
 <p>I am so outraged by all of the restrictions that you are imposing on our beautiful city, this is exactly the same as was done to us during COVID, it is a trespass on the freedom of all right-minded individuals. Your tests are probably just the devil’s trickery, trying to manipulate good people into putting their DNA information in some government database somewhere. It is an absolute outrage and a crime what you are doing, I hope you are able to sleep at night because I certainly wouldn’t be able to in your shoes. This pandemic is absolutely just manufactured fake news, I have asked everyone I know and not a single person is infected with this so-called “bacteria” that you claim exists.</p>
-<p>All the best,<br>
-Madison</p>
+<p>Best wishes,<br>
+Eleanor</p>
 <hr />
-<p><b>From:</b> <a href="mailto:tgh-88@gmail.com" class="email">tgh-88@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:gldk-88@gmail.com" class="email">gldk-88@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommitteet@Glenleith.co.uk" class="email">PandemicResponseCommitteet@Glenleith.co.uk</a> <br>
 <b>Cc:</b> <a href="mailto:city-council@Glenleith.co.uk" class="email">city-council@Glenleith.co.uk</a> <br>
 <b>Subject:</b> The BCG vaccines</p>
@@ -1581,48 +1582,48 @@ Madison</p>
 <p>I am so frightened about new pandemic, the news you read about it is very scary. Thank you so much for all your hard work you are doing to protect us.</p>
 <p>I heard that there was a BCG vaccine that can help protect us, but I am not eligible for this, I was wondering what should I do? Can you please get extra vaccine supplies so that everyone can be eligible? It would be great if we were all protected by the vaccine.</p>
 <p>Thank you so much for all the hard work you do,<br>
-Anika</p>
+Roman</p>
 <hr />
 </div>
 <div id="news-coverage-of-the-glenleith-tuberculosis-outbreak" class="section level2">
 <h2>News Coverage of the Glenleith Tuberculosis outbreak</h2>
 <p><font size="+3"><b>Glenleith Star</b></font><br>
 <font size="+2"><b>Glenleith says farewell to pandemic’s youngest victim</b></font><br>
-by Jessica Smith
-17/03/2023</p>
-<p>The <i>Mycobacterium tuberculosis</i> pandemic ravaging Glenleith has claimed yet another victim. There have been 15 deaths in the pandemic so far, but perhaps the most tragic loss is Poppy Roberts - at only 3, the youngest victim that the pandemic has claimed.</p>
-<p>Poppy Roberts liked books and finger painting. Friends and family say that she was always the most precious child.</p>
-<p>Poppy is survived by her parents and grandparents, and by her siblings Billy and Parker.</p>
-<p>The funeral service will be held Saturday at St. Ninian’s.</p>
+by Perry Collins
+12/03/2023</p>
+<p>The <i>Mycobacterium tuberculosis</i> pandemic ravaging Glenleith has claimed yet another victim. There have been 15 deaths in the pandemic so far, but perhaps the most tragic loss is Noah Lewis - at only 3, the youngest victim that the pandemic has claimed.</p>
+<p>Noah Lewis liked zebras and movies. Friends and family say that he was always a treasure.</p>
+<p>Noah is survived by his parents and grandparents, and by his siblings Rory and Susan.</p>
+<p>The funeral service will be held Thursday at Westlake Memorial.</p>
 <hr />
-<p><font size="+3"><b>Glenleith Looking-Glass</b></font><br>
+<p><font size="+3"><b>Glenleith Star</b></font><br>
 <font size="+2"><b>Glenleith says farewell to local legend</b></font><br>
-by Omar Moore
-16/03/2023</p>
-<p>The <i>Mycobacterium tuberculosis</i> pandemic ravaging Glenleith has claimed yet another victim. Albert Hill, local musician and star, sadly passed away on Thursday.</p>
-<p>Albert was perhaps best known for his 2000 work Pigeons and Partridges , but fans say that the rest of his work was equally as excellent.</p>
-<p>Albert is survived by his partner, and by his siblings Eva and Elaine.</p>
-<p>The funeral service will be held Thursday at St. Judes.</p>
+by Hugh Elliot
+10/03/2023</p>
+<p>The <i>Mycobacterium tuberculosis</i> pandemic ravaging Glenleith has claimed yet another victim. Maisie Marshall, local author and star, sadly passed away on Monday.</p>
+<p>Maisie was perhaps best known for her 2004 work Harmful , but fans say that the rest of her work was equally as excellent.</p>
+<p>Maisie is survived by her wife, and by her siblings Jim, Ella, and Evie.</p>
+<p>The funeral service will be held Monday at Trinity Church.</p>
 <hr />
 <p><font size="+3"><b>Glenleith Evening News</b></font><br>
 <font size="+2"><b>Glenleith pandemic council making great strides</b></font><br>
-by Roselyne Chevalier
-07/03/2023</p>
-<p>Citizens of Glenleith should be grateful that the city’s Pandemic Response Council, hurriedly convened when a new pandemic began to hit Glenleith, has been so effective. While the initial death toll from the pandemic appeared to be quite devastating, the actions taken by the PRC seem to have been most effective.</p>
-<p>Officials from the World Health Organisation have publicly praised the Glenleith PRC, saying that it is difficult to imagine a more effective public health response</p>
+by David Locke
+05/03/2023</p>
+<p>Citizens of Glenleith should be thankful that the city’s Pandemic Response Council, hurriedly convened when a new pandemic began to hit Glenleith, has been so effective. While the initial death toll from the pandemic appeared to be quite devastating, the actions taken by the PRC seem to have been most effective.</p>
+<p>Officials from the World Health Organisation have publicly praised the Glenleith PRC, saying that their actions have been extremely effective</p>
 <p>There have been 6 deaths due to <i>Mycobacterium tuberculosis</i> in Glenleith this week. This is an enormous decrease, and hopefully Glenleith will see the death toll continue to decrease in the coming weeks.</p>
 <hr />
-<p><font size="+3"><b>Glenleith Looking-Glass</b></font><br>
+<p><font size="+3"><b>Glenleith Evening News</b></font><br>
 <font size="+2"><b>Yet more overreach in the name of “science”</b></font><br>
-by Emily Ochs
-04/03/2023</p>
+by David Morris
+10/03/2023</p>
 <p>Governments across the globe have seen how successful power-grabs in the name of public health can be, following on the wave of restrictions imposed because of so-called viral diseases like COVID-19 and “mpox”. So-called scientists are fearmongering - aerosols, monkeys, “bird” flu - now they think that they can fool us into thinking that the air and water are unsafe. Citizens of Glenleith should stand strong against this terrible tyranny! No more mask mandates, no more senseless restrictions!</p>
 <p>Our elders should not be left to die alone, left frightened and hopeless in a mandatory lockdown claimed to be “for their benefit.” Our children should not be left to struggle through “pandemic” after “pandemic” - their language and literacy skills have been left behind due to these lockdowns, and their mental health is suffering. It is time that we take back control of our lives and end this tyranny of fear-mongering and so-called science. Citizens of Glenleith, stand with me and resist this most recent attack on your freedoms and your lives.</p>
 <hr />
-<p><font size="+3"><b>The Independent </b></font><br>
+<p><font size="+3"><b>BBC Scotland </b></font><br>
 <font size="+2"><b><i>Mycobacterium tuberculosis</i> pandemic in Glenleith</b></font><br>
-by Susan O’Brien
-16/03/2023</p>
+by Barbara Matthews
+12/03/2023</p>
 <p>Hard on the heels of the COVID-19 pandemic and a number of other health scares (monkeypox, or “mpox”, avian flu, and worries about other infectious disease outbreaks), another pandemic has hit the Scottish town of Glenleith. This time, it’s Mycobacterium, a bacterium that is particularly fatal to the elderly and to pregnant women.</p>
 <p>There have been 15 deaths in the pandemic so far, but perhaps the most frightening aspect to this new pandemic is rumours that these Mycobacterium strains may have become resistant to even more antibiotics - a truly chilling possibility.</p>
 <p>Scientists have been warning about the antibiotic resistance crisis for years, saying that careless use of antibiotics could mean that these precious medicines will no longer be available to us in the future.</p>
