--- a/workshop4/workshop4H.html
+++ b/workshop4/workshop4H.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Morgan Feeney" />
 
+<meta name="date" content="2024-07-03" />
 
 <title>BM424 workshop: infectious disease outbreak control</title>
 
@@ -1467,7 +1468,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">BM424 workshop: infectious disease outbreak control</h1>
 <h4 class="author">Morgan Feeney</h4>
-<h4 class="date">17/03/2023</h4>
+<h4 class="date">07/03/2024</h4>
 
 </div>
 
@@ -1476,7 +1477,7 @@ border-radius: 0px;
 <h2>Scenario H: Group A Streptococcus in Dalessie</h2>
 <p>The Dalessie Pandemic Response committee has gathered the following information for the second meeting of your group.</p>
 <p>You should evaluate the effect(s) of the actions that you took at your last meeting and evaluate the current state of affairs in Dalessie.</p>
-<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 24th, via the submission link on MyPlace.</p>
+<p>You should submit 3-5 specific actions for further actions to control the pandemic, using the <a href="../proformas/BM424_workshop4_proforma.docx">workshop 4 pro forma</a> (also available on MyPlace). You should consider whether you want to continue any of the public health measures you implemented at your previous meeting, or whether you want to stop them; and also whether there are any new, additional actions you would like to take. Submit the pro forma by noon on Friday March 15th, via the submission link on MyPlace.</p>
 </div>
 <div id="minutes-from-the-last-pandemic-response-committee-meeting" class="section level2">
 <h2>Minutes from the last Pandemic Response Committee Meeting</h2>
@@ -1565,16 +1566,16 @@ Number of <i>Streptococcus pyogenes</i> related GP visits (total)
 <div id="letters-from-the-public" class="section level2">
 <h2>Letters from the Public</h2>
 <hr />
-<p><b>From:</b> <a href="mailto:lulu_1946@gmail.com" class="email">lulu_1946@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:js_1946@gmail.com" class="email">js_1946@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommittee@Dalessie.co.uk" class="email">PandemicResponseCommittee@Dalessie.co.uk</a> <br>
 <b>Cc:</b>
-<b>Subject:</b> This Terrible Pandemic</p>
+<b>Subject:</b> This Devastating Pandemic</p>
 <p>Dear Pandemic Response Committee</p>
 <p>I am so outraged by all of the restrictions that you are imposing on our beautiful city, this is exactly the same as was done to us during COVID, it is a trespass on the freedom of all right-minded individuals. Your antigen tests are probably just the devil’s trickery, trying to manipulate good people into putting their DNA information in some government database somewhere. It is an absolute outrage and a crime what you are doing, I hope you are able to sleep at night because I certainly wouldn’t be able to in your shoes. This pandemic is absolutely just manufactured fake news, I have asked everyone I know and not a single person is infected with this so-called “bacteria” that you claim exists.</p>
-<p>Yours sincerely,<br>
-Eleanor</p>
+<p>Respectfully,<br>
+Graham</p>
 <hr />
-<p><b>From:</b> <a href="mailto:oirl-88@gmail.com" class="email">oirl-88@gmail.com</a> <br>
+<p><b>From:</b> <a href="mailto:js-88@gmail.com" class="email">js-88@gmail.com</a> <br>
 <b>To:</b> <a href="mailto:PandemicResponseCommitteet@Dalessie.co.uk" class="email">PandemicResponseCommitteet@Dalessie.co.uk</a> <br>
 <b>Cc:</b> <a href="mailto:city-council@Dalessie.co.uk" class="email">city-council@Dalessie.co.uk</a> <br>
 <b>Subject:</b> The Rapid antigen test</p>
@@ -1582,56 +1583,53 @@ Eleanor</p>
 <p>I am so frightened about new pandemic, the news you read about it is very scary. Thank you so much for all your hard work you are doing to protect us.</p>
 <p>I heard that there was some rapid testing kits being distributed to the general public so we can help protect ourselves against the disease. My neighbour Claudia got some through her post-box. However, I have not yet gotten any, I think it may be because I have only recently moved to Dalessieso I am worried that I am not on the list yet. Could you please send me the information I need, or a link that I can go to, to find more about how to get these kits, please?</p>
 <p>Thank you so much for all the hard work you do,<br>
-Rodrigo</p>
+Rosemary</p>
 <hr />
 </div>
 <div id="news-coverage-of-the-dalessie-streptococcus-pyogenes-outbreak" class="section level2">
 <h2>News Coverage of the Dalessie <i>Streptococcus pyogenes</i> outbreak</h2>
 <p><font size="+3"><b>Dalessie Telegraph</b></font><br>
 <font size="+2"><b>Dalessie says farewell to pandemic’s youngest victim</b></font><br>
-by Alan Patterson
-16/03/2023</p>
-<p>The <i>Streptococcus pyogenes</i> pandemic ravaging Dalessie has claimed yet another victim. There have been 47 deaths in the pandemic so far, but perhaps the most tragic loss is Charles Hughes - at only 4, the youngest victim that the pandemic has claimed.</p>
-<p>Charles Hughes liked hedgehogs and trains. Friends and family say that he was always a treasure.</p>
-<p>Charles is survived by his parents and grandparents, and by his siblings Charlie, Alfie, and Jacob.</p>
+by Frances MacArthur
+10/03/2023</p>
+<p>The <i>Streptococcus pyogenes</i> pandemic ravaging Dalessie has claimed yet another victim. There have been 26 deaths in the pandemic so far, but perhaps the most tragic loss is Florence Green - at only 4, the youngest victim that the pandemic has claimed.</p>
+<p>Florence Green liked sail boats and goldfish. Friends and family say that she was always the most precious child.</p>
+<p>Florence is survived by her parents and grandparents, and by her siblings Theodore and Mason.</p>
 <p>The funeral service will be held Saturday at Westlake Memorial.</p>
 <hr />
-<p><font size="+3"><b>Dalessie Telegraph</b></font><br>
+<p><font size="+3"><b>Dalessie Daily Press</b></font><br>
 <font size="+2"><b>Dalessie says farewell to local legend</b></font><br>
-by Mary-Louise Schultz
-07/03/2023</p>
-<p>The <i>Streptococcus pyogenes</i> pandemic ravaging Dalessie has claimed yet another victim. Dylan Thompson, local author and star, sadly passed away on Saturday.</p>
-<p>Dylan was perhaps best known for his 2012 work Enemy of Fire , but fans say that the rest of his work was equally as influential.</p>
-<p>Dylan is survived by his partner, and by his siblings Eva and Elaine.</p>
-<p>The funeral service will be held Tuesday at St. Elfrida’s Catholic Church.</p>
-<hr />
-<p><font size="+3"><b>Dalessie News</b></font><br>
-<font size="+2"><b>Dalessie pandemic council making great strides</b></font><br>
-by Maurice McGill
-09/03/2023</p>
-<p>Citizens of Dalessie should be glad that the city’s Pandemic Response Council, swiftly convened when a new pandemic began to hit Dalessie, has been so effective. While the initial death toll from the pandemic appeared to be quite devastating, the actions taken by the PRC seem to have been most effective.</p>
-<p>Officials from Public Health Scotland have publicly praised the Dalessie PRC, saying that this is a triumph that shows how effective public health responses can be</p>
-<p>There have been 8 deaths due to <i>Streptococcus pyogenes</i> in Dalessie this week. This is an enormous decrease, and hopefully Dalessie will see the death toll continue to decrease in the coming weeks.</p>
+by David Russell
+04/03/2023</p>
+<p>The <i>Streptococcus pyogenes</i> pandemic ravaging Dalessie has claimed yet another victim. Salem Watt, local musician and star, sadly passed away on Saturday.</p>
+<p>Salem was perhaps best known for their 2011 work Pigeons and Partridges , but fans say that the rest of their work was equally as influential.</p>
+<p>Salem is survived by their husband, and by their siblings Gloria and Stephen.</p>
+<p>The funeral service will be held Saturday at St. Judes.</p>
 <hr />
 <p><font size="+3"><b>Dalessie Times</b></font><br>
+<font size="+2"><b>Dalessie pandemic council making great strides</b></font><br>
+by Roselyne O’Brien
+07/03/2023</p>
+<p>Citizens of Dalessie should be grateful that the city’s Pandemic Response Council, quickly convened when a new pandemic began to hit Dalessie, has been so effective. While the initial death toll from the pandemic appeared to be quite high, the actions taken by the PRC seem to have been most effective.</p>
+<p>Officials from the NHS have publicly praised the Dalessie PRC, saying that this is a triumph that shows how effective public health responses can be</p>
+<p>There have been 8 deaths due to <i>Streptococcus pyogenes</i> in Dalessie this week. This is an enormous decrease, and hopefully Dalessie will see the death toll continue to decrease in the coming weeks.</p>
+<hr />
+<p><font size="+3"><b>Dalessie Evening News</b></font><br>
 <font size="+2"><b>Yet more overreach in the name of “science”</b></font><br>
-by Chester Stein
-10/03/2023</p>
+by Luis McKay
+04/03/2023</p>
 <p>Governments across the globe have seen how successful power-grabs in the name of public health can be, following on the wave of restrictions imposed because of so-called viral diseases like COVID-19 and “mpox”. So-called scientists are fearmongering - aerosols, monkeys, “bird” flu - now they think that they can fool us into thinking that that we should “vaccinate” our children with whatever disease tthey dream up next. Citizens of Dalessie should stand strong against this terrible tyranny! No more mask mandates, no more senseless restrictions! No more so-called “vaccines”!</p>
 <p>Our elders should not be left to die alone, left frightened and hopeless in a mandatory lockdown claimed to be “for their benefit.” Our children should not be left to struggle through “pandemic” after “pandemic” - their language and literacy skills have been left behind due to these lockdowns, and their mental health is suffering. It is time that we take back control of our lives and end this tyranny of fear-mongering and so-called science. Citizens of Dalessie, stand with me and resist this most recent attack on your freedoms and your lives.</p>
 <hr />
 <p><font size="+3"><b>The Guardian </b></font><br>
 <font size="+2"><b><i>Streptococcus pyogenes</i> pandemic in Dalessie</b></font><br>
-by Miguel Page
-09/03/2023</p>
+by Ben Charles
+16/03/2023</p>
 <p>Hard on the heels of the COVID-19 pandemic and a number of other health scares (monkeypox, or “mpox”, avian flu, and worries about other infectious disease outbreaks), another pandemic has hit the Scottish town of Dalessie. This time, it’s <i>Streptococcus pyogenes</i>, a bacterium that causes a sometimes fatal illness.</p>
-<p>There have been 47 deaths in the pandemic so far, but perhaps the most frightening aspect to this new pandemic is rumours that antibiotic-resistant <i>Streptococcus pyogenes</i> strains have begun to emerge.</p>
+<p>There have been 26 deaths in the pandemic so far, but perhaps the most frightening aspect to this new pandemic is rumours that antibiotic-resistant <i>Streptococcus pyogenes</i> strains have begun to emerge.</p>
 <p>Scientists have been warning about the antibiotic resistance crisis for years, saying that careless use of antibiotics could mean that these precious medicines will no longer be available to us in the future.</p>
 <p>The Dalessie Pandemic Response Committee have pushed for a fast track for vaccines - which may be our only hope, in the light of looming antibiotic resistance. But what can we do if these vaccines aren’t successful, or if they aren’t distributed widely - as we saw for the COVID jabs last year?</p>
 <p>Some of the <i>Streptococcus</i> strains found in Dalessie are reportedly resistant to all clinically available antibiotics, and scientists warn that these drug-resistant pathogens might be able to spread to new locations. Will nearby towns be next, or could these “superbugs” go as global as the SARS-COV2 virus did? How safe is our food and drink?</p>
-</div>
-<div id="data-gathered" class="section level2">
-<h2>Data gathered</h2>
 </div>
 
 
